--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -15,5 +15,9 @@ jobs:
           node-version: '20'
       - name: Install dependencies
         run: npm ci
+      - name: Start Vite server
+        run: npm run dev &
+      - name: Wait for server
+        run: npx wait-on http://localhost:5173
       - name: Run Cypress tests
         run: npx cypress run
