--- a/.github/workflows/gh-pages-hml.yml
+++ b/.github/workflows/gh-pages-hml.yml
@@ -19,6 +19,8 @@ jobs:
         run: npm run build
         env:
           VITE_ENV: hml
+          VITE_BASE: /hml/
+          VITE_BASE: /hml/
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
