--- a/.github/workflows/gh-pages-tst.yml
+++ b/.github/workflows/gh-pages-tst.yml
@@ -19,6 +19,8 @@ jobs:
         run: npm run build
         env:
           VITE_ENV: tst
+          VITE_BASE: /tst/
+          VITE_BASE: /tst/
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
