--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -2,7 +2,9 @@ name: Testes e2e na dev
 
 on:
   push:
-    branches: [dev]
+    branches: [tst]
+  pull_request:
+    branches: [tst]
 
 jobs:
   cypress-run:
