--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist -b gh-pages -r https://github.com/<username>/pipelineexample.git",
+    "deploy": "gh-pages -d dist -b gh-pages -r https://github.com/lucascarlosdante/pipelineexample.git",
     "dev": "vite",
     "build": "vite build && cp dist/index.html dist/404.html",
     "lint": "eslint .",
