ajustes finos pt2

--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist -b gh-pages -r https://github.com/lucascarlosdante/pipelineexample.git",
-    "dev": "vite",
+    "dev": "npx npm-run-all --parallel vite mock-api",
+    "vite": "vite",
+    "mock-api": "node mock-api.cjs",
     "build": "vite build && cp dist/index.html dist/404.html",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
+    "cors": "^2.8.5",
+    "cypress-plugin-api": "^2.11.2",
+    "express": "^5.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
