--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -1,3 +1,19 @@
+  api-cypress:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install dependencies
+        run: npm ci
+      - name: Start mock API
+        run: npm run mock-api &
+      - name: Wait for mock API
+        run: npx wait-on http://localhost:3001/api/echo
+      - name: Run Cypress API login tests
+        run: npx cypress run --spec "cypress/e2e/api-login.cy.js"
 name: Testes e2e na dev
 
 on:
@@ -17,7 +33,9 @@ jobs:
         run: npm ci
       - name: Start Vite server
         run: npm run dev &
-      - name: Wait for server
-        run: npx wait-on http://localhost:5173
+      - name: Start mock API
+        run: npm run mock-api &
+      - name: Wait for servers
+        run: npx wait-on http://localhost:5173 http://localhost:3001/api/echo
       - name: Run Cypress tests
         run: npx cypress run
