--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -21,5 +21,5 @@ jobs:
         run: npm run mock-api &
       - name: Wait for servers
         run: npx wait-on http://localhost:5173 http://localhost:3001/api/echo
-      - name: Run Cypress API login tests
-        run: npx cypress run --spec "cypress/e2e/api-login.cy.js"
+      - name: Run Cypress CRUD tests
+        run: npx cypress run --spec "cypress/e2e/crud.cy.js"
